--- a/index.html
+++ b/index.html
@@ -24,155 +24,160 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
-    <header class="gnb">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="gnb-wrapper">
-              <div class="gnb-left">
-                <h1 class="logo">
-                  <a href="/">
-                    <img src="./assets/images/Logo.svg" alt="내일의 집" />
-                  </a>
-                </h1>
+    <header class="global-header">
+      <div class="gnb">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="gnb-wrapper">
+                <div class="gnb-left">
+                  <h1 class="logo">
+                    <a href="/">
+                      <img src="./assets/images/Logo.svg" alt="내일의 집" />
+                    </a>
+                  </h1>
 
-                <nav class="gnb-nav sm-hidden">
-                  <h2 class="visually-hidden">메뉴</h2>
-                  <ul class="gnb-nav-list">
-                    <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
-                    <li class="gnb-nav-item is-active">
-                      <a href="/">스토어</a>
-                    </li>
-                    <li class="gnb-nav-item"><a href="/">인테리어시공</a></li>
-                  </ul>
-                </nav>
+                  <nav class="gnb-nav sm-hidden">
+                    <h2 class="visually-hidden">메뉴</h2>
+                    <ul class="gnb-nav-list">
+                      <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
+                      <li class="gnb-nav-item is-active">
+                        <a href="/">스토어</a>
+                      </li>
+                      <li class="gnb-nav-item"><a href="/">인테리어시공</a></li>
+                    </ul>
+                  </nav>
 
-                <button
-                  class="gnb-icon-button is-menu sm-only"
-                  type="button"
-                  aria-label="메뉴 열기 버튼"
-                >
-                  <i class="ic-menu"></i>
-                </button>
-              </div>
-
-              <div class="gnb-right">
-                <div class="gnb-search lg-only">
-                  <div class="input-group" aria-label="검색창 열기">
-                    <i class="ic-search" aria-hidden="true"></i>
-                    <input
-                      class="form-input"
-                      type="text"
-                      placeholder="스토어 검색"
-                    />
-                  </div>
-
-                  <section class="search-history is-active">
-                    <header class="search-history-header">
-                      <h2 class="title">최근 검색어</h2>
-                      <button type="button">전체 삭제</button>
-                    </header>
-
-                    <!-- 최근 검색어가 있을 때 -->
-                    <div class="search-history-content">
-                      <ol class="search-history-list">
-                        <li class="search-history-item">
-                          <button class="word-button" type="button">
-                            카펫
-                          </button>
-                          <button
-                            class="delete-button"
-                            type="button"
-                            aria-label="검색어 삭제"
-                          >
-                            <i class="ic-close"></i>
-                          </button>
-                        </li>
-                        <li class="search-history-item">
-                          <button class="word-button" type="button">
-                            포스터
-                          </button>
-                          <button class="delete-button" type="button">
-                            <i class="ic-close" aria-label="검색어 삭제"></i>
-                          </button>
-                        </li>
-                        <li class="search-history-item">
-                          <button class="word-button" type="button">
-                            규조토 발판
-                          </button>
-                          <button class="delete-button" type="button">
-                            <i class="ic-close" aria-label="검색어 삭제"></i>
-                          </button>
-                        </li>
-                      </ol>
-                    </div>
-                  </section>
-                </div>
-                <!-- 로그인 했을 때 -->
-                <div class="button-group">
                   <button
-                    class="gnb-icon-button is-search lg-hidden"
+                    class="gnb-icon-button is-menu sm-only"
                     type="button"
-                    aria-label="검색 열기 버튼"
+                    aria-label="메뉴 열기 버튼"
                   >
-                    <i class="ic-search"></i>
+                    <i class="ic-menu"></i>
                   </button>
-
-                  <a
-                    class="gnb-icon-button sm-hidden"
-                    href="/"
-                    aria-label="스크랩북 페이지로 이동"
-                  >
-                    <i class="ic-bookmark"></i>
-                  </a>
-
-                  <a
-                    class="gnb-icon-button sm-hidden"
-                    href="/"
-                    aria-label="내 소식 페이지로 이동"
-                  >
-                    <i class="ic-bell"></i>
-                  </a>
-
-                  <a
-                    class="gnb-icon-button is-cart"
-                    href="/"
-                    aria-label="장바구니로 페이지로 이동"
-                  >
-                    <i class="ic-cart"></i>
-                    <strong
-                      class="badge"
-                      aria-label="장바구니에 상품이 5개 담겨 있습니다"
-                      >5</strong
-                    >
-                  </a>
-
-                  <div class="my-menu is-active sm-hidden">
-                    <button
-                      class="my-menu-avatar-button"
-                      type="button"
-                      aria-label="마이 메뉴 열기 버튼"
-                    >
-                      <img
-                        src="./assets/images/img-user-01.jpg"
-                        alt="User image"
-                      />
-                    </button>
-                    <div class="my-menu-content">
-                      <ul class="my-menu-list">
-                        <li class="my-menu-item"><a href="/">마이페이지</a></li>
-                        <li class="my-menu-item"><a href="/">나의 쇼핑</a></li>
-                        <li class="my-menu-item"><a href="/">이벤트</a></li>
-                        <li class="my-menu-item">
-                          <button type="button">로그아웃</button>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
                 </div>
 
-                <!-- 로그인 안 했을 때 -->
-                <!-- <div class="button-group">
+                <div class="gnb-right">
+                  <div class="gnb-search lg-only">
+                    <div class="input-group" aria-label="검색창 열기">
+                      <i class="ic-search" aria-hidden="true"></i>
+                      <input
+                        class="form-input"
+                        type="text"
+                        placeholder="스토어 검색"
+                      />
+                    </div>
+
+                    <section class="search-history is-active">
+                      <div class="search-history-div">
+                        <h2 class="title">최근 검색어</h2>
+                        <button type="button">전체 삭제</button>
+                      </div>
+
+                      <!-- 최근 검색어가 있을 때 -->
+                      <div class="search-history-content">
+                        <ol class="search-history-list">
+                          <li class="search-history-item">
+                            <button class="word-button" type="button">
+                              카펫
+                            </button>
+                            <button
+                              class="delete-button"
+                              type="button"
+                              aria-label="검색어 삭제"
+                            >
+                              <i class="ic-close"></i>
+                            </button>
+                          </li>
+                          <li class="search-history-item">
+                            <button class="word-button" type="button">
+                              포스터
+                            </button>
+                            <button class="delete-button" type="button">
+                              <i class="ic-close" aria-label="검색어 삭제"></i>
+                            </button>
+                          </li>
+                          <li class="search-history-item">
+                            <button class="word-button" type="button">
+                              규조토 발판
+                            </button>
+                            <button class="delete-button" type="button">
+                              <i class="ic-close" aria-label="검색어 삭제"></i>
+                            </button>
+                          </li>
+                        </ol>
+                      </div>
+                    </section>
+                  </div>
+                  <!-- 로그인 했을 때 -->
+                  <div class="button-group">
+                    <button
+                      class="gnb-icon-button is-search lg-hidden"
+                      type="button"
+                      aria-label="검색 열기 버튼"
+                    >
+                      <i class="ic-search"></i>
+                    </button>
+
+                    <a
+                      class="gnb-icon-button sm-hidden"
+                      href="/"
+                      aria-label="스크랩북 페이지로 이동"
+                    >
+                      <i class="ic-bookmark"></i>
+                    </a>
+
+                    <a
+                      class="gnb-icon-button sm-hidden"
+                      href="/"
+                      aria-label="내 소식 페이지로 이동"
+                    >
+                      <i class="ic-bell"></i>
+                    </a>
+
+                    <a
+                      class="gnb-icon-button is-cart"
+                      href="/"
+                      aria-label="장바구니로 페이지로 이동"
+                    >
+                      <i class="ic-cart"></i>
+                      <strong
+                        class="badge"
+                        aria-label="장바구니에 상품이 5개 담겨 있습니다"
+                        >5</strong
+                      >
+                    </a>
+
+                    <div class="my-menu is-active sm-hidden">
+                      <button
+                        class="my-menu-avatar-button"
+                        type="button"
+                        aria-label="마이 메뉴 열기 버튼"
+                      >
+                        <img
+                          src="./assets/images/img-user-01.jpg"
+                          alt="User image"
+                        />
+                      </button>
+                      <div class="my-menu-content">
+                        <ul class="my-menu-list">
+                          <li class="my-menu-item">
+                            <a href="/">마이페이지</a>
+                          </li>
+                          <li class="my-menu-item">
+                            <a href="/">나의 쇼핑</a>
+                          </li>
+                          <li class="my-menu-item"><a href="/">이벤트</a></li>
+                          <li class="my-menu-item">
+                            <button type="button">로그아웃</button>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- 로그인 안 했을 때 -->
+                  <!-- <div class="button-group">
                   <button
                     class="gnb-icon-button is-search lg-hidden"
                     type="button"
@@ -193,16 +198,69 @@
                   </div>
                 </div> -->
 
-                <button class="sm-hidden btn-fill-primary btn-40" type="button">
-                  글쓰기
-                  <i class="ic-chevron" aria-hidden="true"></i>
-                </button>
+                  <button
+                    class="sm-hidden btn-fill-primary btn-40"
+                    type="button"
+                  >
+                    글쓰기
+                    <i class="ic-chevron" aria-hidden="true"></i>
+                  </button>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+
+      <nav class="lnb">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+              <h1 class="visually-hidden">스토어 메뉴</h1>
+
+              <ul class="lnb-list">
+                <li class="lnb-list-item is-active">
+                  <a href="/">스토어홈</a>
+                </li>
+                <li class="lnb-list-item">
+                  <a href="/">카테고리</a>
+                </li>
+                <li class="lnb-list-item">
+                  <a href="/">신혼가구</a>
+                </li>
+                <li class="lnb-list-item">
+                  <a href="/">베스트</a>
+                </li>
+                <li class="lnb-list-item">
+                  <a href="/">오늘의딜</a>
+                </li>
+                <li class="lnb-list-item">
+                  <a href="/">연휴특가</a>
+                </li>
+                <li class="lnb-list-item">
+                  <a href="/">월동준비</a>
+                </li>
+                <li class="lnb-list-item">
+                  <a href="/">리퍼마켓</a>
+                </li>
+                <li class="lnb-list-item">
+                  <a href="/">
+                    기획전
+                    <i class="ic-new" lang="en" aria-label="New"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
     </header>
+
+    <main class="product-show">
+      <!-- 상품 상세 페이지 본론 -->
+    </main>
+
+    <footer class="global-footer"></footer>
 
     <aside class="sidebar sm-only">
       <header class="sidebar-header">
@@ -430,49 +488,6 @@
         </div>
       </div>
     </aside>
-
-    <nav class="lnb">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-4">
-            <h1 class="visually-hidden">스토어 메뉴</h1>
-
-            <ul class="lnb-list">
-              <li class="lnb-list-item is-active">
-                <a href="/">스토어홈</a>
-              </li>
-              <li class="lnb-list-item">
-                <a href="/">카테고리</a>
-              </li>
-              <li class="lnb-list-item">
-                <a href="/">신혼가구</a>
-              </li>
-              <li class="lnb-list-item">
-                <a href="/">베스트</a>
-              </li>
-              <li class="lnb-list-item">
-                <a href="/">오늘의딜</a>
-              </li>
-              <li class="lnb-list-item">
-                <a href="/">연휴특가</a>
-              </li>
-              <li class="lnb-list-item">
-                <a href="/">월동준비</a>
-              </li>
-              <li class="lnb-list-item">
-                <a href="/">리퍼마켓</a>
-              </li>
-              <li class="lnb-list-item">
-                <a href="/">
-                  기획전
-                  <i class="ic-new" lang="en" aria-label="New"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
 
     <div class="overlay" aria-hidden="true"></div>
   </body>
