--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                       >
                     </a>
 
-                    <div class="my-menu is-active sm-hidden">
+                    <div class="my-menu sm-hidden">
                       <button
                         class="my-menu-avatar-button"
                         type="button"
@@ -385,6 +385,65 @@
                 </ol>
               </div>
             </div>
+          </div>
+
+          <div class="col-sm-4 col-md-6 col-lg-5">
+            <section class="product-info">
+              <header class="product-info-header">
+                <a class="info-brand" href="/">보아르</a>
+                <h1 class="info-title">
+                  캠핑/가정용 400W 미니멀 전기히터 VO-HT015 (안전장치기능탑재)
+                </h1>
+
+                <div class="info-review">
+                  <div class="star-rating-13">
+                    <i class="ic-star is-active"></i>
+                    <i class="ic-star is-active"></i>
+                    <i class="ic-star is-active"></i>
+                    <i class="ic-star is-active"></i>
+                    <i class="ic-star is-active"></i>
+                  </div>
+
+                  <p>
+                    <strong>566</strong>
+                    <span class="sm-hidden">개 리뷰</span>
+                  </p>
+                </div>
+              </header>
+
+              <div class="product-info-price">
+                <div class="info-original-price">
+                  <div class="discount-rate">
+                    <span>34</span>
+                    <span>%</span>
+                  </div>
+
+                  <div class="price-off">
+                    <strong class="price-number">49,900</strong>
+                    <span class="price-currency">원</span>
+                  </div>
+                </div>
+
+                <div class="info-sale-price">
+                  <div class="price-20">
+                    <strong class="price-number">32,900</strong>
+                    <span class="price-currency">원</span>
+                  </div>
+
+                  <strong class="tag-red">특가</strong>
+                </div>
+
+                <p class="info-point">
+                  <strong aria-label="987 포인트">987P</strong>
+                  적립해드립니다. (VIP 3배 혜택 적용됨)
+                </p>
+              </div>
+
+              <div class="product-info-delivery">
+                <span>일반택배</span>
+                <strong class="tag-grey">무료배송</strong>
+              </div>
+            </section>
           </div>
         </div>
       </div>
