--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
                       </div>
 
                       <footer class="review-card-footer">
-                        <button class="btn-outlined btn-32" type="button"></button>
+                        <button class="btn-outlined btn-32" type="button">도움이 돼요</button>
 
                         <p><strong><span>7</span>명</strong>에게 도움이 되었습니다.</p>
                       </footer>
