--- a/index.html
+++ b/index.html
@@ -772,7 +772,10 @@
 
                         <dd>
                           <div class="bar-graph" aria-hidden="true">
-                            <div class="active-bar"></div>
+                            <div
+                              class="active-bar"
+                              style="width: 82.5088339223%"
+                            ></div>
                           </div>
                           <strong class="count" aria-label="467명">467</strong>
                         </dd>
@@ -783,7 +786,10 @@
 
                         <dd>
                           <div class="bar-graph" aria-hidden="true">
-                            <div class="active-bar"></div>
+                            <div
+                              class="active-bar"
+                              style="width: 15.371024735%"
+                            ></div>
                           </div>
                           <strong class="count" aria-label="87명">87</strong>
                         </dd>
@@ -794,7 +800,10 @@
 
                         <dd>
                           <div class="bar-graph" aria-hidden="true">
-                            <div class="active-bar"></div>
+                            <div
+                              class="active-bar"
+                              style="width: 2.296819788%"
+                            ></div>
                           </div>
                           <strong class="count" aria-label="13명">13</strong>
                         </dd>
