--- a/index.html
+++ b/index.html
@@ -1194,7 +1194,7 @@
             </section> -->
 
             <section
-              class="product-section product-inquiry is-open"
+              class="product-section product-inquiry"
               id="product-inquiry"
               role="tabpanel"
             >
@@ -1280,6 +1280,31 @@
                 </div>
               </div>
             </section>
+
+            <!-- NOTE: 문의가 없을 때 -->
+            <!-- <section
+              class="product-section product-inquiry is-open"
+              id="product-inquiry"
+              role="tabpanel"
+            >
+              <header class="product-section-header">
+                <h1 class="title">문의</h1>
+                <strong class="badge" aria-label="0개">0</strong>
+
+                <a class="text-button" href="/">문의하기</a>
+                <button
+                  class="icon-button sm-only"
+                  type="button"
+                  aria-label="더보기"
+                >
+                  <i class="ic-chevron" aria-hidden="true"></i>
+                </button>
+              </header>
+
+              <div class="product-section-content">
+                <p class="inquiry-empty">문의 내역이 없습니다<br /></p>
+              </div>
+            </section> -->
 
             <div
               class="product-section-divider sm-only"
