--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
 
               <div class="product-section-content">
                 <div class="user-gallery" role="region">
-                  <div class="user-gallery">
+                  <div class="user-gallery-slider">
                     <ol class="slider-list">
                       <li class="slider-item">
                         <div class="gallery-card">
@@ -764,7 +764,73 @@
                       </li>
                     </ol>
                   </div>
-                  <div class="user-gallery-thumbnail"></div>
+
+                  <div class="user-gallery-thumbnail">
+                    <ol class="thumbnail-list">
+                      <li class="thumbnail-item">
+                        <button>
+                          <img
+                            src="./assets/images/img-review-01.jpg"
+                            alt="1번 스타일링 샷"
+                          />
+                        </button>
+                      </li>
+
+                      <li class="thumbnail-item">
+                        <button>
+                          <img
+                            src="./assets/images/img-review-02.jpg"
+                            alt="2번 스타일링 샷"
+                          />
+                        </button>
+                      </li>
+
+                      <li class="thumbnail-item">
+                        <button>
+                          <img
+                            src="./assets/images/img-review-03.jpg"
+                            alt="3번 스타일링 샷"
+                          />
+                        </button>
+                      </li>
+
+                      <li class="thumbnail-item">
+                        <button>
+                          <img
+                            src="./assets/images/img-review-04.jpg"
+                            alt="4번 스타일링 샷"
+                          />
+                        </button>
+                      </li>
+
+                      <li class="thumbnail-item">
+                        <button>
+                          <img
+                            src="./assets/images/img-review-05.jpg"
+                            alt="5번 스타일링 샷"
+                          />
+                        </button>
+                      </li>
+
+                      <li class="thumbnail-item">
+                        <button>
+                          <img
+                            src="./assets/images/img-review-06.jpg"
+                            alt="6번 스타일링 샷"
+                          />
+                        </button>
+                      </li>
+
+                      <li class="thumbnail-item">
+                        <button>
+                          <img
+                            src="./assets/images/img-review-01.jpg"
+                            alt="1번 스타일링 샷"
+                          />
+                        </button>
+                      </li>
+                    </ol>
+                  </div>
                 </div>
               </div>
             </section>
