--- a/index.html
+++ b/index.html
@@ -638,7 +638,11 @@
                 <div class="user-gallery" role="region">
                   <div class="user-gallery-slider">
                     <ol class="slider-list">
-                      <li class="slider-item">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-5"
+                      >
                         <div class="gallery-card">
                           <figure class="gallery-card-image">
                             <img
@@ -663,7 +667,11 @@
                         </div>
                       </li>
 
-                      <li class="slider-item">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-4"
+                      >
                         <div class="gallery-card">
                           <figure class="gallery-card-image">
                             <img
@@ -688,7 +696,11 @@
                         </div>
                       </li>
 
-                      <li class="slider-item">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-3"
+                      >
                         <div class="gallery-card">
                           <figure class="gallery-card-image">
                             <img
@@ -713,7 +725,11 @@
                         </div>
                       </li>
 
-                      <li class="slider-item">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-2"
+                      >
                         <div class="gallery-card">
                           <figure class="gallery-card-image">
                             <img
@@ -738,7 +754,11 @@
                         </div>
                       </li>
 
-                      <li class="slider-item">
+                      <li
+                        class="slider-item"
+                        role="tabpanel"
+                        aria-labelledby="user-gallery-tab-1"
+                      >
                         <div class="gallery-card">
                           <figure class="gallery-card-image">
                             <img
@@ -766,8 +786,12 @@
                   </div>
 
                   <div class="user-gallery-thumbnail">
-                    <ol class="thumbnail-list">
-                      <li class="thumbnail-item">
+                    <ol class="thumbnail-list" role="tablist">
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-1"
+                        role="tab"
+                      >
                         <button>
                           <img
                             src="./assets/images/img-review-01.jpg"
@@ -776,7 +800,11 @@
                         </button>
                       </li>
 
-                      <li class="thumbnail-item">
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-2"
+                        role="tab"
+                      >
                         <button>
                           <img
                             src="./assets/images/img-review-02.jpg"
@@ -785,7 +813,11 @@
                         </button>
                       </li>
 
-                      <li class="thumbnail-item">
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-3"
+                        role="tab"
+                      >
                         <button>
                           <img
                             src="./assets/images/img-review-03.jpg"
@@ -794,7 +826,11 @@
                         </button>
                       </li>
 
-                      <li class="thumbnail-item">
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-4"
+                        role="tab"
+                      >
                         <button>
                           <img
                             src="./assets/images/img-review-04.jpg"
@@ -803,29 +839,15 @@
                         </button>
                       </li>
 
-                      <li class="thumbnail-item">
+                      <li
+                        class="thumbnail-item"
+                        id="user-gallery-tab-5"
+                        role="tab"
+                      >
                         <button>
                           <img
                             src="./assets/images/img-review-05.jpg"
                             alt="5번 스타일링 샷"
-                          />
-                        </button>
-                      </li>
-
-                      <li class="thumbnail-item">
-                        <button>
-                          <img
-                            src="./assets/images/img-review-06.jpg"
-                            alt="6번 스타일링 샷"
-                          />
-                        </button>
-                      </li>
-
-                      <li class="thumbnail-item">
-                        <button>
-                          <img
-                            src="./assets/images/img-review-01.jpg"
-                            alt="1번 스타일링 샷"
                           />
                         </button>
                       </li>
